# py_project_template

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: aspell.yml  pylint_dev.yml  pylint_stable.yml  pytest.yml  yamllint.yml
.gitlab-ci.d/: lintTests.yml  pyTests.yml
src/: main.py
tests/configs/: aspell_exceptions  pylint_dev.toml  pylint_stable.toml
tests/modules/main/: test_main.py
