[metadata]
name = py_project_template
version = 1.0.0
description = Python application designed to ...
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/LegenJCdary/py_project_template.git
author = Kuba Wierzbowski
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source =  https://github.com/LegenJCdary/py_project_template.git

[options]
package_dir =
    py_project_template=src
packages =
    py_project_template
    py_project_template.modules
    py_project_template.modules.configs
    py_project_template.modules.misc
    py_project_template.modules.outputs
install_requires =
python_requires = >=3.9
zip_safe = False
setup_requires =
    setuptools
include_package_data = True

[options.entry_points]
console_scripts =
    py_project_template = py_project_template.main:py_project_template
